# form

./: .gitignore  AGENTS.md  CONCEPTS.md  Cargo.toml
.githooks/: pre-push
crates/form-cli/: Cargo.toml
crates/form-cli/src/: config.rs  lib.rs  main.rs  paths.rs  resources.rs  session.rs  workspace.rs
crates/form-cli/tests/: runtime_foundation.rs
crates/form-core/: Cargo.toml
crates/form-core/src/: approval.rs  audit.rs  error.rs  lib.rs  limits.rs  message.rs  patch.rs  plugin.rs  provider.rs  session.rs  tool.rs
crates/form-core/tests/: contracts.rs
docs/: architecture.md  mvp.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/rules/0000-lines-of-codes/: RULE.md
docs/solutions/architecture-patterns/: form-core-inert-serde-contracts.md
docs/solutions/conventions/: form-cli-centralized-path-name-constants.md
docs/solutions/developer-experience/: native-git-hooks-rust-quality-gates.md
openspec/: config.yaml
openspec/changes/archive/2026-07-04-m0-implement-form-core-contracts/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-05-m1-jsonl-sessions/: design.md  tasks.md
openspec/changes/archive/2026-07-05-m1-workspace-config-context/: design.md  tasks.md  (+1 more)
openspec/changes/m0-create-rust-workspace-skeleton/: design.md  proposal.md  tasks.md
openspec/changes/m1-jsonl-sessions/: proposal.md
openspec/specs/form-core-contracts/: spec.md
openspec/specs/rust-workspace-skeleton/: spec.md
openspec/specs/session-jsonl-store/: spec.md
openspec/specs/workspace-config-context/: spec.md
scripts/: install-hooks.sh
(+4 files in other folders)
