[package]
name = "form-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", default-features = false, features = ["std", "help", "usage", "error-context", "string"] }
form-core = { path = "../form-core" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "form"
path = "src/main.rs"
